<resources>
    <string name="app_name">People</string>
    <string name="search_title">Search...</string>
    <string name="intent_title">Share Contact</string>
    <string name="read_contact_permission">We cant show anything without permissions</string>


    <string name="card_view_default_name_text">name</string>
    <string name="card_view_phone_number_text">Phone: </string>
    <string name="card_view_cap_letter">N</string>
    <string name="email_text">Email:</string>
    <string name="birthday_text">Birthday:</string>
    <string name="add_contact_text">Add Contact</string>
    <string name="edit_text_name">Name</string>
    <string name="edit_text_phone">Phone</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_birth">Birthday</string>
    <string name="name_two_dots">Name:</string>
    <string name="parcial_phone_text">Phone </string>

    <string name="intent_read_image">We cannot get images without permissions</string>
    <string name="error_get_image_1">Something went wrong</string>
    <string name="error_get_image_2">You haven\'t picked Image</string>
    <string name="error_add_contact">At Least The Name</string>
    <string name="call_intent_text">We cannot call until you grant us permission</string>
    <string name="ask_call_dialog">Witch number?</string>
    <string name="edit_activity_label">Edit Contact</string>
    <string name="contact_share_text">Contact:</string>
    <string name="name_share_text">"Name: "</string>
    <string name="phone_share_text">"Phone "</string>
    <string name="email_share_text">"Email: "</string>
    <string name="birthday_share_text">"Birthday: "</string>
</resources>
