<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".AddContactActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/layout_add_profile_photo"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person"
            android:background="@color/default_pp_color"
            android:elevation="7dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/layout_add_put_image_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:civ_circle_background_color="@color/MaterialLime900"
            android:src="@drawable/ic_add"
            android:elevation="7dp"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/name_two_dots"
                    />

                <EditText
                    android:id="@+id/layout_add_name"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="text"
                    android:gravity="center"
                    android:hint="@string/edit_text_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/card_view_phone_number_text"
                    />

                <EditText
                    android:id="@+id/layout_add_phone"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="phone"
                    android:gravity="center"
                    android:hint="@string/edit_text_phone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/email_text"
                    />

                <EditText
                    android:id="@+id/layout_add_email"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="textEmailAddress"
                    android:gravity="center"
                    android:hint="@string/edit_text_email"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/birthday_text"
                    />

                <Button
                    android:id="@+id/layout_add_birthday"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:hint="@string/edit_text_birth"/>
            </LinearLayout>


            <ImageButton
                android:id="@+id/layout_add_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:elevation="7dp"
                android:src="@drawable/ic_person_add"
                android:background="@color/default_pp_color"
                />

        </LinearLayout>

    </ScrollView>



</LinearLayout>