<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dialog_profile_photo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person"
        android:elevation="7dp"
        android:background="@color/default_pp_color"
        />

    <LinearLayout
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/MaterialBlueGrey900"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.75"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_margin="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/card_view_default_name_text"
                />

            <LinearLayout
                android:id="@+id/linear_layout_phones_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/email_text"/>

                <TextView
                    android:id="@+id/dialog_email"
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/email_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/birthday_text"/>

                <TextView
                    android:id="@+id/dialog_birth"
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/birthday_text"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dialog_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:src="@drawable/ic_share_black"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="5dp"
                app:civ_circle_background_color="@android:color/white"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dialog_call"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:src="@drawable/ic_phone"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp"
                />

        </LinearLayout>



    </LinearLayout>



</LinearLayout>