<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_landscape_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/layout_landscape_profile_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:background="@color/MaterialBlueGrey900"
        android:src="@drawable/ic_person"
        android:elevation="15dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/layout_landscape_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDarker"
                android:text="@string/card_view_default_name_text"/>

            <LinearLayout
                android:id="@+id/linear_layout_phones_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email_text"
                    android:textSize="17sp"
                    android:textColor="@color/colorPrimaryDarker"
                    />

                <TextView
                    android:id="@+id/layout_landscape_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="15sp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/email_text"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthday_text"
                    android:textSize="17sp"
                    android:textColor="@color/colorPrimaryDarker"
                    />

                <TextView
                    android:id="@+id/layout_landscape_birth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="15sp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/birthday_text"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/layout_landscape_share"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_share_black"
                    app:civ_border_color="@color/MaterialBlueGrey900"
                    app:civ_border_width="2dp"
                    app:civ_circle_background_color="@android:color/white"
                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/layout_landscape_call"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_phone_black"
                    app:civ_border_color="@color/MaterialBlueGrey900"
                    app:civ_border_width="2dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>